# smpc_solver

./: CMakeLists.txt  Doxyfile  LICENSE  L__initializer_8cpp.html  L__initializer_8cpp_source.html  L__initializer_8h.html  L__initializer_8h_source.html  Makefile  README  README.md  README_8md.html  README_8md_source.html  WMG_8cpp.html  WMG_8cpp_source.html  WMG_8h.html  WMG_8h_source.html  WMG__private_8cpp.html  WMG__private_8cpp_source.html  __doxygen_8h.html  __doxygen_8h_source.html  __doxygen__as_8h.html  __doxygen__as_8h_source.html  __doxygen__ip_8h.html  __doxygen__ip_8h_source.html  annotated.html  as__chol__solve_8cpp.html  as__chol__solve_8cpp_source.html  as__chol__solve_8h.html  as__chol__solve_8h_source.html  as__constraint_8h.html  as__constraint_8h_source.html  as__matrix__E_8cpp.html  as__matrix__E_8cpp_source.html  as__matrix__E_8h.html  as__matrix__E_8h_source.html  as__matrix__ecL_8cpp.html  as__matrix__ecL_8cpp_source.html  as__matrix__ecL_8h.html  as__matrix__ecL_8h_source.html  as__problem__param_8cpp.html  (+255 more)
WMG/: Makefile  WMG.cpp  WMG.h  WMG_private.cpp  footstep.cpp  footstep.h  inverted_pendulum.cpp  point2d.cpp  point2d.h  rect_constraint.cpp  rect_constraint.h  smpc_parameters.cpp
docs/: smpc_formulas.sty
include/: WMG.h  smpc_solver.h
solver/: L_initializer.cpp  L_initializer.h  Makefile  _doxygen.h  _doxygen_as.h  _doxygen_ip.h  as_chol_solve.cpp  as_chol_solve.h  as_constraint.h  as_matrix_E.cpp  as_matrix_E.h  as_matrix_ecL.cpp  as_matrix_ecL.h  as_problem_param.cpp  as_problem_param.h  chol_solve.cpp  chol_solve.h  chol_solve_as.cpp  chol_solve_as.h  chol_solve_ip.cpp  chol_solve_ip.h  common_const.h  constraint.h  ip_chol_solve.cpp  ip_chol_solve.h  ip_matrix_E.cpp  ip_matrix_E.h  ip_matrix_ecL.cpp  ip_matrix_ecL.h  ip_problem_param.cpp  ip_problem_param.h  matrix_E.cpp  matrix_E.h  matrix_ecL.cpp  matrix_ecL.h  matrix_ecL_as.cpp  matrix_ecL_as.h  matrix_ecL_ip.cpp  matrix_ecL_ip.h  problem_param.cpp  (+14 more)
src/: L_initializer.cpp  L_initializer.h  Makefile  _doxygen.h  (+10 more)
(+203 files in other folders)
